# tibia-hunts

./: .env.backup.20250830-022206  .env.example  .gcloudignore  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  README.md  app.yaml  deploy.ps1  deploy.sh  main.py  pyproject.toml  requirements.txt  setup-oauth-helper.sh  update-env-credentials.ps1
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: code-quality.yml  deploy-after-release.yml  deploy-gcp.yml  django-tests.yml  pr-title-check.yml  pr-title-validation.yml  release.yml
docs/: CONTRIBUTING.md  COST_OPTIMIZATION.md  DEPLOYMENT.md  GITHUB_SECRETS_SETUP.md
rfc/: architecture.md  v0.1.md
scripts/: update-env-credentials.ps1
src/: .coveragerc  manage.py
src/accounts/: __init__.py  admin.py  models.py  signals.py  tests.py  views.py
src/accounts/management/: __init__.py
src/accounts/management/commands/: __init__.py  cleanup_oauth.py  setup_oauth.py
src/accounts/migrations/: 0001_initial.py
src/accounts/templates/: home.html
src/accounts/tests/: __init__.py  test_authentication.py  test_management_commands.py  test_models.py
src/tibia_hunts/: asgi.py  settings.py  settings_production.py  urls.py  views.py  wsgi.py
src/tibia_hunts/settings/: __init__.py  cloud.py  common.py  local.py
