[tool.poetry]
name = "tibia-hunts"
version = "1.0.1"
description = ""
authors = ["vichoko <vicenteoyanedel@gmail.com>"]
readme = "README.md"
packages = [{include = "tibia_hunts"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

